--- a/index.html
+++ b/index.html
@@ -537,7 +537,9 @@
                 <!--Deuxième vieille-->
                 <h3>Veille juridique</h3>
                 <p>
-                    La veille juridique consiste à suivre et à analyser régulièrement les actualités et évolutions des lois et réglementations d’un domaine de droit juridique.
+                    La veille juridique consiste à suivre et à analyser régulièrement les actualités et évolutions des lois et réglementations d’un domaine de droit 
+			juridique. Le but étant ainsi pour tout développeur de toujours être au courant des dernières évolutions légales et de pouvoir les appliquer dans
+                     ses développements.
                 </p>
                 <p>
                     La protection des données est un sujet crucial de nos jours, les informations personnelles sont de plus en plus recherchées par les grandes entreprises 
