--- a/index.html
+++ b/index.html
@@ -479,66 +479,74 @@
             <div id="veille">
                 <!--Première vieille-->
                 <h3>Veille technologique</h3>
-                <p>
-                La veille technologique consiste à s’informer en permanence sur les actualités, les avancées et innovations relatives à 
-                un domaine technologique précis. Le but étant ainsi de toujours être informé des bonnes pratiques à suivre, des 
-                technologies à utiliser, des dernières des failles de sécurité…
-                </p>
-                <p>
-                Dans mon cas, j’ai choisi de mettre en place une veille technologique relative à l’intelligence artificielle. Car c’est 
-                un domaine en plein essor, qui évolue en permanence et pour lequel je porte un intérêt particulier.
-                </p>
-                <p>
-                L'intelligence artificielle est une branche de l'informatique qui va regrouper toutes les méthodes permettant à des machines
-                d'apprendre à résoudre des problèmes et à s'adapter à de nouvelles situations.
-                <br>
-                De plus, elle est utilisée dans de nombreux domaines (médecine, agriculture, industrie, ...) et 
-                objets du quotidien comme les GPS, les systèmes de recommandations.
-                <br>
-                Ces dernières années, l'intelligence artificielle est en évolution constante et les nouvelles applications et avancées
-                se font de plus en plus nombreuses. C'est dans ce contexte que l'IA va très probablement bouleverser nos quotidiens et révolutionner
-                nos vies. Ainsi, il est important de s'informer et de suivre les actualités de ce domaine pour faire face aux enjeux que l'IA va impliquer.
-                </p>
-                <p>
-                Pour suivre les actualités de l'intelligence artificielle, je suis le contenu de différents créateurs de contenus 
-                (notamment par le biais de Twitter et de leur vidéos / podcast sur Youtube) qui traitent de ce sujet.) : 
-                <br>
-                <a href="https://twitter.com/DFintelligence">- Defend Intelligence</a>
-                <br>
-                <a href="https://twitter.com/DIMENSION_YT">- Dimension</a>
-                <br>
-                <a href="https://twitter.com/UnderscoreTalk">- UnderscoreTalk</a>
-                <br>
-                <a href="https://twitter.com/Micode">- Micode</a>
-                </p>
-                <p>
-                En plus de ses sources d'informations j'ai aussi acheter des livres sur l'intelligence artificielle pour apprendre plus en détail son fonctionnement,
-                et pouvoir moi aussi expérimenter et commencer à développer pas à pas des projets d'intelligence artificielle.
-                <br>
-                <a href="https://www.eyrolles.com/Informatique/Livre/l-intelligence-artificielle-en-pratique-avec-python-9782416010941/">- L'intelligence artificielle en pratique avec Python</a>
-                </p>
-                <p>
-                Aussi pour m'informer, j'utilise aussi des flux RSS qui me permettent de suivre les actualités de l'IA en temps réel par 
-                le bais de NewsBlur qui me permet de suivre les flux RSS de différents sites :
-                <br>
-                <a href="https://www.theverge.com/ai-artificial-intelligence">- The Verge</a>
-                <br>
-                <a href="https://www.cnil.fr/fr/intelligence-artificielle/">- La CNIL</a>
-                <br>
-                <a href="https://openai.com/blog">- Open IA</a>
-                <br>
-                </p>
-                <p>
-                Enfin, pour aller plus loin dans cette veille, je vais essayer de développer un projet personnel pour me permettre 
-                de mettre en pratique mes connaissances mais aussi pour me permettre de mieux comprendre le fonctionnement de l'IA et les
-                difficultés auxquelles on peut être confronté.
-                </p>
+                <div id="veille_boxe">
+                    <div id="veille_droite">
+                        <img src="./_ff310077-f4a8-417c-b08d-fff40989a9c5.jpg" alt="veille technologique">
+                    </div>
+                    <div id="veille_gauche">
+                    <p>
+                    La veille technologique consiste à s’informer en permanence sur les actualités, les avancées et innovations relatives à 
+                    un domaine technologique précis. Le but étant ainsi de toujours être informé des bonnes pratiques à suivre, des 
+                    technologies à utiliser, des dernières des failles de sécurité…
+                    </p>
+                    <p>
+                    Dans mon cas, j’ai choisi de mettre en place une veille technologique relative à l’intelligence artificielle. Car c’est 
+                    un domaine en plein essor, qui évolue en permanence et pour lequel je porte un intérêt particulier.
+                    </p>
+                    <p>
+                    L'intelligence artificielle est une branche de l'informatique qui va regrouper toutes les méthodes permettant à des machines
+                    d'apprendre à résoudre des problèmes et à s'adapter à de nouvelles situations.
+                    <br>
+                    De plus, elle est utilisée dans de nombreux domaines (médecine, agriculture, industrie, ...) et 
+                    objets du quotidien comme les GPS, les systèmes de recommandations.
+                    <br>
+                    Ces dernières années, l'intelligence artificielle est en évolution constante et les nouvelles applications et avancées
+                    se font de plus en plus nombreuses. C'est dans ce contexte que l'IA va très probablement bouleverser nos quotidiens et révolutionner
+                    nos vies. Ainsi, il est important de s'informer et de suivre les actualités de ce domaine pour faire face aux enjeux que l'IA va impliquer.
+                    </p>
+                    <p>
+                    Pour suivre les actualités de l'intelligence artificielle, je suis le contenu de différents créateurs de contenus 
+                    (notamment par le biais de Twitter et de leur vidéos / podcast sur YouTube) qui traitent de ce sujet. : 
+                    <br>
+                    <a href="https://twitter.com/DFintelligence">- Defend Intelligence</a>
+                    <br>
+                    <a href="https://twitter.com/DIMENSION_YT">- Dimension</a>
+                    <br>
+                    <a href="https://twitter.com/UnderscoreTalk">- UnderscoreTalk</a>
+                    <br>
+                    <a href="https://twitter.com/Micode">- Micode</a>
+                    </p>
+                    <p>
+                    En plus de ses sources d'informations j'ai aussi acheté des livres sur l'intelligence artificielle pour apprendre plus en détail son fonctionnement,
+                    et pouvoir moi aussi expérimenter et commencer à développer pas à pas des projets d'intelligence artificielle.
+                    <br>
+                    <a href="https://www.eyrolles.com/Informatique/Livre/l-intelligence-artificielle-en-pratique-avec-python-9782416010941/">- L'intelligence artificielle en pratique avec Python</a>
+                    </p>
+                    <p>
+                    Aussi pour m'informer, j'utilise aussi des flux RSS qui me permettent de suivre les actualités de l'IA en temps réel par 
+                    le bais de NewsBlur qui me permet de suivre les flux RSS de différents sites :
+                    <br>
+                    <a href="https://www.theverge.com/ai-artificial-intelligence">- The Verge</a>
+                    <br>
+                    <a href="https://www.cnil.fr/fr/intelligence-artificielle/">- La CNIL</a>
+                    <br>
+                    <a href="https://openai.com/blog">- Open IA</a>
+                    <br>
+                    </p>
+                    <p>
+                    Enfin, pour aller plus loin dans cette veille, je vais essayer de développer un projet personnel pour me permettre 
+                    de mettre en pratique mes connaissances mais aussi pour me permettre de mieux comprendre le fonctionnement de l'IA et les
+                    difficultés auxquelles on peut être confronté.
+                    </p>
+                    </div>
+                </div>
 
                 <!--Deuxième vieille-->
+                <br>
                 <h3>Veille juridique</h3>
                 <p>
-                    La veille juridique consiste à suivre et à analyser régulièrement les actualités et évolutions des lois et réglementations d’un domaine de droit 
-			juridique. Le but étant ainsi pour tout développeur de toujours être au courant des dernières évolutions légales et de pouvoir les appliquer dans
+                    La veille juridique consiste à suivre et à analyser régulièrement les actualités et évolutions des lois et réglementations d’un domaine de droit
+                     juridique. Le but étant ainsi pour tout développeur de toujours être au courant des dernières évolutions légales et de pouvoir les appliquer dans
                      ses développements.
                 </p>
                 <p>
@@ -550,10 +558,10 @@
                 <p>
                     Au cours de mon parcours professionnel, je serai très certainement amené à travailler avec des données personnelles ou bien même à travailler sur la gestion de celles-ci. Ainsi faire une veille juridique sur 
                     le thème de la protection des données est essentiel pour être en mesure de respecter les obligations légales et garantir la confidentialité des données des individus.
-                    J'ai décidé de mettre en place une veille juridique sur la protection des données, en me concentrant principalement sur les législations françaises, mais aussi sur les législation européennes..
+                    J'ai décidé de mettre en place une veille juridique sur la protection des données, en me concentrant principalement sur les législations françaises, mais aussi sur les législations européennes.
                 </p>
                 <p>
-                    Pour me tenir informé de l'actualité de ce domaine j'utilise également des flux RSS pour être notifié des derniers changements en terme de protection des données : 
+                    Pour me tenir informé de l'actualité de ce domaine j'utilise également des flux RSS pour être notifié des derniers changements en termes de protection des données : 
                     <br>
                     <a href="https://www.cnil.fr/fr/actualites">- La CNIL</a>
                     <br>
@@ -562,7 +570,6 @@
                     <a href="https://www.ssi.gouv.fr/flux-rss/"> - ANSSI</a>
 
                 </p>
-
             </div>
         </section>
 
