--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                 <h3>Veille technologique</h3>
                 <div id="veille_boxe">
                     <div id="veille_droite">
-                        <img src="./_ff310077-f4a8-417c-b08d-fff40989a9c5.jpg" alt="veille technologique">
+                        <img src="static/ia.jpg" alt="veille technologique">
                     </div>
                     <div id="veille_gauche">
                     <p>
