--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="icon" type="image/png" href="static/LOGO.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio | Thomas DESCHAMPT</title>
-        <meta name="description" content="Bienvenue sur mon portfolio, je m'appelle Thomas DESCHAMPT et je suis étudiant en première année d'informatique à Lyon.">
+        <meta name="description" content="Bienvenue sur mon portfolio, je m'appelle Thomas DESCHAMPT et je suis étudiant en deuxième année d'informatique à Lyon.">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
