--- a/index.html
+++ b/index.html
@@ -284,11 +284,11 @@
                 <!-- Division pour la partie de droite-->
                 <div class="droite1">
                     <h3>Twitter Graph • 2023</h3>
-                    <p>Utilisant Twitter depuis de nombreuses années, il m’est arrivée de tomber sur des personnes réalisant des 
-                        analyses des interactions entre utilisateurs d'un même réseau social. Et ce en utilisant des graphiques produit à partir des données récupérées
-                        par les API de ces réseaux sociaux. Ainsi, j’ai dans un premier temps récupérer toutes les données de mes likes grâce à l’API 
-                        Twitter pour ensuite les traiter et réaliser un graphique mais comme cela représentait un échantillon assez faible. 
-                        J’ai ensuite décider d’analyser les followers du compte @ZenEmission (42 000 à l’époque).</p>
+                    <p>Utilisant Twitter depuis de nombreuses années, il m’est arrivé de tomber sur des personnes réalisant des 
+                        analyses des interactions entre les utilisateurs d'un réseau social. Et ce en utilisant des graphiques produit à partir des données récupérées
+                        par les API de ces réseaux sociaux. Ainsi, j’ai dans un premier temps récupéré toutes les données de mes likes grâce à l’API 
+                        Twitter pour ensuite les traiter et réaliser un graphique mais cela représentait un échantillon assez faible. 
+                        J’ai donc ensuite décidé d’analyser les followers du compte @ZenEmission (42 000 à l’époque).</p>
                     <p>Pour réaliser ce projet, j’ai utilisé l’API de Twitter, le logiciel de Gephi (logiciel de visualisation de données) et 
                         l’algorithme de récupération de données fait par Eleurent.
                     </p>
