--- a/index.html
+++ b/index.html
@@ -517,13 +517,13 @@
                     <a href="https://twitter.com/Micode">- Micode</a>
                     </p>
                     <p>
-                    En plus de ses sources d'informations j'ai aussi acheté des livres sur l'intelligence artificielle pour apprendre plus en détail son fonctionnement,
+                    En plus de ces sources d'informations j'ai aussi acheté des livres sur l'intelligence artificielle pour apprendre plus en détail son fonctionnement,
                     et pouvoir moi aussi expérimenter et commencer à développer pas à pas des projets d'intelligence artificielle.
                     <br>
                     <a href="https://www.eyrolles.com/Informatique/Livre/l-intelligence-artificielle-en-pratique-avec-python-9782416010941/">- L'intelligence artificielle en pratique avec Python</a>
                     </p>
                     <p>
-                    Aussi pour m'informer, j'utilise aussi des flux RSS qui me permettent de suivre les actualités de l'IA en temps réel par 
+                    Aussi pour m'informer, j'utilise des flux RSS qui me permettent de suivre les actualités de l'IA en temps réel par 
                     le bais de NewsBlur qui me permet de suivre les flux RSS de différents sites :
                     <br>
                     <a href="https://www.theverge.com/ai-artificial-intelligence">- The Verge</a>
@@ -552,7 +552,7 @@
                 <p>
                     La protection des données est un sujet crucial de nos jours, les informations personnelles sont de plus en plus recherchées par les grandes entreprises 
                     pour les utiliser le plus souvent à des fins commerciales. De plus, la réglementation relative à la protection évolue régulièrement et chaque nouvelle 
-                    innovation technologique implique elle aussi ces nouvelles régulations. Comme on peut le voir avec la réglementation Mica sur les crypto-monnaies qui  
+                    innovation technologique implique elle aussi ces nouvelles règles. Comme on peut le voir avec la réglementation Mica sur les crypto-monnaies qui  
                     est actuellement en phase d’expérimentation d’une durée de 3 ans.
                 </p>
                 <p>
