--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                     <div class="gauche2">
                         <h3>Simulateur de réactions chimiques • 2022</h3>
                         <p>Pour le compte d’un groupe de chimie, j’ai développé un programme de calcul de réactions. Lorsqu’ils formulent, 
-                            les chimistes du groupe Condat mélangent de nombreux réactifs. Selon les quantités et la nature de chaque réactif, les
+                            les chimistes du groupe Condat mélangent de nombreux réactifs. Selon les quantités, la nature et l'ordre d'incorporation de chaque réactif, les
                             réactions peuvent être très différentes. La problématique était donc d’obtenir une méthode de calcul simple, rapide,
                             précise et commune afin de déterminer les produits de réactions.
                             <br>
@@ -284,10 +284,10 @@
                 <!-- Division pour la partie de droite-->
                 <div class="droite1">
                     <h3>Twitter Graph • 2023</h3>
-                    <p>Utilisant Twitter depuis de nombreuses années, il m’est arrivé de tomber sur des personnes réalisant des 
-                        analyses des interactions entre les utilisateurs d'un réseau social. Et ce en utilisant des graphiques produit à partir des données récupérées
-                        par les API de ces réseaux sociaux. Ainsi, j’ai dans un premier temps récupéré toutes les données de mes likes grâce à l’API 
-                        Twitter pour ensuite les traiter et réaliser un graphique mais cela représentait un échantillon assez faible. 
+                    <p>Utilisant Twitter depuis de nombreuses années, il m’est arrivé de rencontrer des personnes réalisant des 
+                        analyses des interactions entre les utilisateurs d'un réseau social et ce, en utilisant des graphiques produits à partir des données récupérées
+                        par les API de ces réseaux sociaux. De mon côté, j’ai dans un premier temps récupéré toutes les données de mes likes grâce à l’API 
+                        Twitter pour ensuite les traiter et réaliser un graphique mais cela représentait un échantillon assez faible et donc peu représentatif. 
                         J’ai donc ensuite décidé d’analyser les followers du compte @ZenEmission (42 000 à l’époque).</p>
                     <p>Pour réaliser ce projet, j’ai utilisé l’API de Twitter, le logiciel de Gephi (logiciel de visualisation de données) et 
                         l’algorithme de récupération de données fait par Eleurent.
@@ -320,12 +320,12 @@
                         <h3>Service Web - PPE • 2023</h3>
                         <p>Lors de cette première réalisation de l'épreuve E5 du BTS SIO, j'ai travaillé sur un projet répondant aux attentes 
                             du laboratoire GSB dans un contexte professionnel. En effet, pour faciliter la réalisation de ses activités, le 
-                            laboratoire souhaite mettre en place un Web Service qui lui permettra de visualiser et de traiter les données de sa base de données.
-                            Ainsi pour répondre à cette demande, j'ai réalisé une base de données et un Web-Service Back-End qui permettra d'intéragir avec la base.</p>
+                            laboratoire souhaite mettre en place un Web Service qui lui permettra de visualiser et de traiter les éléments de sa future base de données.
+                           Pour répondre à cette demande, j'ai tout d'abord réalisé une base de données puis un Web-Service Back-End qui permet d'intéragir avec la base.</p>
                         <p>
-                            Pour réaliser ce projet, j'ai utilisé le langage SQL et le logiciel Looping pour mettre en place la base de données ainsi que C# et 
+                            Pour mener ce projet, j'ai utilisé le langage SQL et le logiciel Looping pour la mise en place de la base de données ainsi que C# et 
                             les frameworks .NET et Entity Framework pour le Web-Service.</p>
-                        <p>Vous pouvez retrouver le dossier qui résume les réalisations mises en place en cliquant sur le lien suivant : Dossier de réalisations 1.</p>
+                        <p>Vous pouvez retrouver le dossier des réalisations mises en place en cliquant sur le lien suivant : Dossier de réalisations 1.</p>
                         <!-- Division pour la partie en bas à gauche-->
                         <div class="bas">
                             <div>
@@ -357,14 +357,13 @@
                 <!-- Division pour la partie de droite-->
                 <div class="droite1">
                     <h3>Application Frontend PPE • 2023</h3>
-                    <p>Pour la deuxième réalisation de l'épreuve E5 du BTS SIO, j'ai une nouvelle fois travaillé sur un projet qui aura pour but de répondre 
-                        aux besoins du laboratoire GSB. Cette fois ci, l'objectif est de créer une application Web qui devra faire appel au Service créé dans la première 
-                    réalisation. L'intérêt sera donc de pouvoir intéragir et pouvoir visualiser les données, on pourra par exemple retrouver des listes de 
-                    médecins en fonction de leur nom ou département d'activité. L'application se devra donc d'être privée et sécurisée pour garantir la sécurisation
+                    <p>Pour la seconde réalisation de l'épreuve E5 du BTS SIO, j'ai une nouvelle fois travaillé sur un projet pour répondre aux besoins du laboratoire GSB. Cette fois-ci, l'objectif est de créer une application Web faisant appel au Service créé dans la première 
+                    réalisation. L'intérêt sera donc d'intéragir et de visualiser les données en temps réel. Ainsi, on pourra par exemple retrouver des listes de 
+                    médecins en fonction de leurs noms ou localisations. L'application se devra donc d'être privée et sécurisée pour garantir la sécurisation
                 des données.</p>
-                <p>Pour réaliser ce projet, j'ai utilisé le langage C# avec le  framework .NET ainsi que les langages HTML, CSS et JavaScript pour
+                <p>Pour construire ce projet, j'ai utilisé le langage C# avec le framework .NET ainsi que les langages HTML, CSS et JavaScript pour
                     l'aspect visuel de l'application.</p>
-                    <p>Vous pouvez retrouver le dossier qui résume les réalisations mises en place en cliquant sur le lien suivant : Dossier de réalisations 2.</p>
+                    <p>Vous pouvez retrouver le dossier des réalisations mises en place en cliquant sur le lien suivant : Dossier de réalisations 2.</p>
                     <!-- Division pour la partie en bas à gauche-->
                     <div class="bas">
                         <div>
