--- a/index.html
+++ b/index.html
@@ -448,20 +448,20 @@
                 </div>
                 <!--Description de l'experience-->
                 <div id="exp_text">
-                    <p>&nbsp &nbsp Lors de ma deuxième année d’étude, j’ai eu l’occasion d’intégrer les effectifs de CGI Lyon, une entreprise spécialisée dans les services et 
-                        conseils informatiques qui opère auprès de clients très variés dans le monde entier.<br>
-                        Durant ce stage de 10 semaines, j’ai pu travailler au sein de l’équipe Apogée, le rôle de cette équipe est d’assurer la TMA (Tierce maintenance 
-                        applicative) du logiciel Apogée.</p>
+                    <p>&nbsp &nbsp Lors de ma deuxième année d’étude, j’ai eu l’occasion de rejoindre les équipes de CGI Lyon. Cette entreprise de dimension internationale est spécialisée dans les services et 
+                        conseils informatiques et opère auprès de clients très variés institutionnels, privés...<br>
+                        Durant ce stage de 10 semaines, j’ai intégré l’équipe Apogée. Cette dernière a pour mission principale d’assurer la TMA (Tierce Maintenance 
+                        Applicative) du logiciel Apogée.</p>
                         <p>&nbsp &nbsp Apogée est un logiciel de gestion intégré (ERP) dédié aux établissements d'enseignement supérieur en France, sous la responsabilité 
-                        de l’AMUE et du ministère de l’éducation. Il permet de gérer l'ensemble des processus administratifs liés à la vie étudiante, tels que 
-                        l'inscription, la scolarité, les examens, la gestion des notes, la bourse, les stages, etc.</p>
-                        <p>&nbsp &nbsp  Le principal enjeu pour CGI est de répondre aux attentes du client relatives au logiciel, ces attentes peuvent être de simples demandes 
-                            d’assistance, des demandes de correctifs de bug qui entrainent des comportements non désirés sur l’application ou encore même 
-                            des demandes d’évolutions qui vont entrainer la création de nouvelles fonctionnalités sur le logiciel.
+                        de l’AMUE et du ministère de l’éducation nationale. Il permet de gérer l'ensemble des processus administratifs liés à la vie étudiante, tels que 
+                        l'inscription, le suivi de la scolarité, les examens, la remontée et gestion des notes, les bourses étudiantes, les stages, etc...</p>
+                        <p>&nbsp &nbsp  Le principal défi pour CGI est de répondre aux attentes du client relatives au logiciel. Ces attentes peuvent être très diverses allant des simples demandes 
+                            d’assistance, aux demandes de correctifs de bug qui entrainent des comportements non désirés sur l’application jusqu'aux
+                            demandes d’évolutions et d'améliorations. Ces dernières requêtes peuvent alors nécessité la création de nouvelles fonctionnalités sur le logiciel.
                         </p>
-                        <p>&nbsp &nbsp Ainsi, pendant ce stage, j’ai participé à la maintenance du logiciel en mettant en place différents correctifs et évolutions pour
-                        répondre aux attentes des utilisateurs du logiciel. Notamment en modifiant le fonctionnement de traitements batch et de traitements Web-Service
-                        mais aussi en faisant évoluer la base de données et ses tables.<br>
+                        <p>&nbsp &nbsp Ainsi, au cours ce stage, j’ai participé à la maintenance du logiciel en mettant en place différents correctifs et évolutions pour
+                        répondre aux attentes des utilisateurs du logiciel (notamment en modifiant le fonctionnement de traitements batch et de traitements Web-Service
+                        mais aussi en faisant évoluer la base de données et ses tables).<br>
                         Pour réaliser ces missions, j’ai principalement utilisé les langages Oracle SQL, PL/SQL, SQL Loader, Pro*C et Java.
                         </p>
                 </div>
