--- a/index.html
+++ b/index.html
@@ -484,28 +484,27 @@
                     </div>
                     <div id="veille_gauche">
                     <p>
-                    La veille technologique consiste à s’informer en permanence sur les actualités, les avancées et innovations relatives à 
-                    un domaine technologique précis. Le but étant ainsi de toujours être informé des bonnes pratiques à suivre, des 
-                    technologies à utiliser, des dernières des failles de sécurité…
-                    </p>
-                    <p>
-                    Dans mon cas, j’ai choisi de mettre en place une veille technologique relative à l’intelligence artificielle. Car c’est 
+                    La veille technologique consiste à se tenir informer en permanence sur les actualités, les avancées et les innovations relatives à 
+                    un domaine technologique précis. Le but recherché est de toujours être informé des bonnes pratiques à suivre, des 
+                    technologies à utiliser, des dernières failles de sécurité identifiées…
+		    <br>
+                    Pour ma part, j’ai choisi de mettre en place une veille technologique sur l’intelligence artificielle. En effet, c’est 
                     un domaine en plein essor, qui évolue en permanence et pour lequel je porte un intérêt particulier.
                     </p>
                     <p>
                     L'intelligence artificielle est une branche de l'informatique qui va regrouper toutes les méthodes permettant à des machines
                     d'apprendre à résoudre des problèmes et à s'adapter à de nouvelles situations.
                     <br>
-                    De plus, elle est utilisée dans de nombreux domaines (médecine, agriculture, industrie, ...) et 
+                    De plus, elle est utilisée dans pratiquement tous les domaines (médecine, agriculture, industrie, ...) et 
                     objets du quotidien comme les GPS, les systèmes de recommandations.
                     <br>
                     Ces dernières années, l'intelligence artificielle est en évolution constante et les nouvelles applications et avancées
-                    se font de plus en plus nombreuses. C'est dans ce contexte que l'IA va très probablement bouleverser nos quotidiens et révolutionner
-                    nos vies. Ainsi, il est important de s'informer et de suivre les actualités de ce domaine pour faire face aux enjeux que l'IA va impliquer.
+                    sont de plus en plus nombreuses. C'est dans ce contexte que l'IA va très probablement bouleverser nos quotidiens et révolutionner
+                    nos vies. Il est donc essentiel de s'informer et de suivre les actualités de ce domaine pour faire face aux enjeux que l'IA va générer dans les années à venir.
                     </p>
                     <p>
-                    Pour suivre les actualités de l'intelligence artificielle, je suis le contenu de différents créateurs de contenus 
-                    (notamment par le biais de Twitter et de leur vidéos / podcast sur YouTube) qui traitent de ce sujet. : 
+                    Pour suivre les actualités de l'intelligence artificielle, je suis différents créateurs de contenus 
+                    (notamment par le biais de Twitter et de leurs vidéos / podcast sur YouTube) qui traitent de ce sujet. : 
                     <br>
                     <a href="https://twitter.com/DFintelligence">- Defend Intelligence</a>
                     <br>
@@ -516,14 +515,14 @@
                     <a href="https://twitter.com/Micode">- Micode</a>
                     </p>
                     <p>
-                    En plus de ces sources d'informations j'ai aussi acheté des livres sur l'intelligence artificielle pour apprendre plus en détail son fonctionnement,
-                    et pouvoir moi aussi expérimenter et commencer à développer pas à pas des projets d'intelligence artificielle.
+                    En plus de ces sources d'informations j'ai aussi lu plusieurs ouvrages portants sur l'intelligence artificielle pour apprendre plus en détail son fonctionnement,
+                    et pouvoir moi aussi expérimenter et commencer à développer pas à pas des projets d'intelligence artificielle. L'un des plus intéressant et accessible selon moi est :
                     <br>
                     <a href="https://www.eyrolles.com/Informatique/Livre/l-intelligence-artificielle-en-pratique-avec-python-9782416010941/">- L'intelligence artificielle en pratique avec Python</a>
                     </p>
                     <p>
-                    Aussi pour m'informer, j'utilise des flux RSS qui me permettent de suivre les actualités de l'IA en temps réel par 
-                    le bais de NewsBlur qui me permet de suivre les flux RSS de différents sites :
+                    D'autre part pour m'informer en temps réel, j'utilise des flux RSS protant sur l'actualité de l'IA par 
+                    le bais de NewsBlur qui permet de centraliser les flux de différents sites :
                     <br>
                     <a href="https://www.theverge.com/ai-artificial-intelligence">- The Verge</a>
                     <br>
@@ -544,20 +543,20 @@
                 <br>
                 <h3>Veille juridique</h3>
                 <p>
-                    La veille juridique consiste à suivre et à analyser régulièrement les actualités et évolutions des lois et réglementations d’un domaine de droit
-                     juridique. Le but étant ainsi pour tout développeur de toujours être au courant des dernières évolutions légales et de pouvoir les appliquer dans
+                    La veille juridique consiste à suivre et à analyser régulièrement les actualités et évolutions des lois et réglementations d’un domaine particulier de droit
+                     juridique ; le but étant ainsi pour tout développeur de toujours être au courant des dernières évolutions légales et de pouvoir les appliquer dans
                      ses développements.
                 </p>
                 <p>
                     La protection des données est un sujet crucial de nos jours, les informations personnelles sont de plus en plus recherchées par les grandes entreprises 
                     pour les utiliser le plus souvent à des fins commerciales. De plus, la réglementation relative à la protection évolue régulièrement et chaque nouvelle 
-                    innovation technologique implique elle aussi ces nouvelles règles. Comme on peut le voir avec la réglementation Mica sur les crypto-monnaies qui  
-                    est actuellement en phase d’expérimentation d’une durée de 3 ans.
+                    innovation technologique implique elle aussi de nouvelles règles. Comme on peut le voir avec la réglementation Mica sur les crypto-monnaies qui  
+                    est actuellement en phase d’expérimentation pour une durée de 3 ans.
                 </p>
                 <p>
                     Au cours de mon parcours professionnel, je serai très certainement amené à travailler avec des données personnelles ou bien même à travailler sur la gestion de celles-ci. Ainsi faire une veille juridique sur 
                     le thème de la protection des données est essentiel pour être en mesure de respecter les obligations légales et garantir la confidentialité des données des individus.
-                    J'ai décidé de mettre en place une veille juridique sur la protection des données, en me concentrant principalement sur les législations françaises, mais aussi sur les législations européennes.
+                    J'ai décidé à titre personnel de mettre en place une veille juridique sur la protection des données, en me concentrant principalement sur les législations françaises, mais aussi sur les législations européennes.
                 </p>
                 <p>
                     Pour me tenir informé de l'actualité de ce domaine j'utilise également des flux RSS pour être notifié des derniers changements en termes de protection des données : 
