--- a/index.html
+++ b/index.html
@@ -506,13 +506,13 @@
                     Pour suivre les actualités de l'intelligence artificielle, je suis différents créateurs de contenus 
                     (notamment par le biais de Twitter et de leurs vidéos / podcast sur YouTube) qui traitent de ce sujet. : 
                     <br>
-                    <a href="https://twitter.com/DFintelligence">- Defend Intelligence</a>
+                    <a href="https://twitter.com/DFintelligence">- Defend Intelligence </a> (Ingénieur en IA)
                     <br>
-                    <a href="https://twitter.com/DIMENSION_YT">- Dimension</a>
+                    <a href="https://twitter.com/DIMENSION_YT">- Dimension</a> (Etudiant en informatique)
                     <br>
-                    <a href="https://twitter.com/UnderscoreTalk">- UnderscoreTalk</a>
+                    <a href="https://twitter.com/UnderscoreTalk">- UnderscoreTalk</a> (Emisison sur l'IT)
                     <br>
-                    <a href="https://twitter.com/Micode">- Micode</a>
+                    <a href="https://twitter.com/Micode">- Micode</a> (Youtuber - Développeur) 
                     </p>
                     <p>
                     En plus de ces sources d'informations j'ai aussi lu plusieurs ouvrages portants sur l'intelligence artificielle pour apprendre plus en détail son fonctionnement,
